--- a/templates/base.html
+++ b/templates/base.html
@@ -13,7 +13,7 @@
         <div class="alert">{{ message }}</div>
     {% endfor %}
     <h2>
-        <img alt="Avatar" class="avatar" src="{{ url_for('static', filename='images/avatar.PNG') }}">
+        <img alt="Avatar" class="avatar" src="{{ url_for('static', filename='images/logo.png') }}" style="vertical-align: middle ; width: 80px;" >
         Weekly Report
     </h2>
     <nav>
@@ -34,7 +34,7 @@
     </nav>
     {% block content %}{% endblock %}
     <footer>
-        <small>&copy; 2018 <a href="http://www.bea-asiapacific.com/zh/">BEA China</a></small>
+        <small>&copy; 2019 <a href="http://www.bea-asiapacific.com/zh/">BEA China</a></small>
 	</footer>
 </body>
 </html>
